14.10 (ws)
      - Extended note entry with mouse: more time positions are now allowed for
        note positioning. Some regressions are expected, especially with tuplets.
13.10 (ws)
      - added a flag to MStaff to indicate a measure/staff has more than one voice. In this
        "multi voice context" stem direction is taken from the "stem direction" table
        instead calculated from vertical note position.
      - moved "stem direction settings for multi voice context" from preferences to style
      - change output order of musicXml elements: output "tie type" just after "duration"
      (sy)
      - fix wrong instrument sounds when inserting/clicking notes after adding
        instruments with instruments dialog
12.10 (ws)
      - updated russian translation from Alexandre Prokoudine
      (sy)
      - fix playback of excerpt after creation
      - do not deselect when dragging canvas
      - do not middle mouse drag/drop selected elements when drag is started on
        an empty part of the canvas
      - make middle-mouse drag canvas work in note entry mode
      - fix wrong-instrument bugs: last instrument played in another tab would
        sound when note is inserted or clicked, and when playing a piano part
11.10 (ws)
      - align dots in dotted chords vertical
      (sy)
      - fix regression in editing hbox and vbox: would not show initially at the correct spot.
      - restore previous state after playback, if it was note entry mode, this is
        indicated and the cursor is shown in the correct place
      - fix playback when starting from after repeats when repeats are enabled
      - improvements to follow playback: try to keep entire system in view,
        don't run off the page edges, let user move the canvas up/down when the
        system height is larger than the canvas (good for scores with many staves)
9.10 (ws)
      - fix midi import regression: chord duration type was not set
8.10 (ws)